// Copyright 2018 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.toolstest_external";
option java_outer_classname = "ToolsTestExternalProto";

package toolstest;

// See toolstest.proto for context on this file.


// Some messages that can not ever be discoverable by the proto reflection
// service, because it is in a separate file.
message ExternalMessage {
  double d = 1;
}